--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "lucide-react": "^0.484.0",
-    "next": "15.2.4",
+    "next": "^15.3.0",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
